# otus-homework4

./: CMakeLists.txt  Doxyfile  function.h  main.cpp  test_print.cpp
.github/workflows/: release.yml  static.yml
